--- a/public/css/home.css
+++ b/public/css/home.css
@@ -2,6 +2,11 @@
     display: none;
 }
 
+.event-image{
+    height: 250px;
+    width: 250px;
+}
+
 #home-buttons .btn {
     margin-left: 1%;
     margin-top: 1%;
